2023-10-13T00:42:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6502536388 # 1245
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 654 1030 / 680 1070
* notice: next accum: outdated-unq outdated-all / unq all: 655 1032 / 680 1071
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-09-28] / [2023-10-12]

2023-10-12T08:12:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6493028797 # 1243
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 654 1030 / 678 1068
* notice: next accum: outdated-unq outdated-all / unq all: 654 1030 / 680 1070
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-28 2023-10-12]

2023-10-12T00:39:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6489714093 # 1242
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1027 / 678 1067
* notice: next accum: outdated-unq outdated-all / unq all: 654 1030 / 678 1068
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-09-27] / [2023-10-11]

2023-10-11T08:12:28Z: